{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 82,
  "lineage": "00951aa9-3126-5af7-3852-e402e07fd39d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "prod_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:211590417027:loadbalancer/prod-web",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "prod-web-810762959.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "prod-web",
            "idle_timeout": 60,
            "instances": [
              "i-093af03b24ae612be",
              "i-0faae9d5c8704c872"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "prod-web",
            "security_groups": [
              "sg-019153d94eccbd050"
            ],
            "source_security_group": "211590417027/sec_group_elb",
            "source_security_group_id": "sg-019153d94eccbd050",
            "subnets": [
              "subnet-02046b09bd09e9772",
              "subnet-0c7c1950c8b55d870"
            ],
            "tags": {
              "marwan": "training",
              "terraform": "true"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.prod_web",
            "aws_security_group.elb",
            "aws_security_group.prod_web",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0743f105d738afe6a",
            "arn": "arn:aws:ec2:us-east-2:211590417027:instance/i-093af03b24ae612be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093af03b24ae612be",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06dbb42f834d3d22d",
            "private_dns": "ip-10-0-25-84.us-east-2.compute.internal",
            "private_ip": "10.0.25.84",
            "public_dns": "ec2-18-221-254-139.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.254.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09347abc9ba5a539f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7c1950c8b55d870",
            "tags": {
              "marwan": "training",
              "terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005f523c601b472aa"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_web",
            "aws_subnet.private",
            "aws_vpc.prod_web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0743f105d738afe6a",
            "arn": "arn:aws:ec2:us-east-2:211590417027:instance/i-0faae9d5c8704c872",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faae9d5c8704c872",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc1f645af43be8c7",
            "private_dns": "ip-10-0-19-132.us-east-2.compute.internal",
            "private_ip": "10.0.19.132",
            "public_dns": "ec2-18-219-94-41.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.94.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04784a651f0c1cc1a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7c1950c8b55d870",
            "tags": {
              "marwan": "training",
              "terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005f523c601b472aa"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_web",
            "aws_subnet.private",
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211590417027:internet-gateway/igw-0a2e864bff596ebc6",
            "id": "igw-0a2e864bff596ebc6",
            "owner_id": "211590417027",
            "vpc_id": "vpc-0fe4176c08006b3a3"
          },
          "dependencies": [
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2e864bff596ebc6",
            "id": "r-rtb-0190c738051401a401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0190c738051401a40",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211590417027:security-group/sg-019153d94eccbd050",
            "description": "Security group for public facing ELBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019153d94eccbd050",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sec_group_elb",
            "name_prefix": "",
            "owner_id": "211590417027",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe4176c08006b3a3"
          },
          "dependencies": [
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211590417027:security-group/sg-005f523c601b472aa",
            "description": "Allow std http and https inbound and outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005f523c601b472aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.16.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "prod_web",
            "name_prefix": "",
            "owner_id": "211590417027",
            "revoke_rules_on_delete": false,
            "tags": {
              "marwan": "training",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe4176c08006b3a3"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211590417027:subnet/subnet-0c7c1950c8b55d870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0c7c1950c8b55d870",
            "map_public_ip_on_launch": true,
            "owner_id": "211590417027",
            "vpc_id": "vpc-0fe4176c08006b3a3"
          },
          "dependencies": [
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211590417027:subnet/subnet-02046b09bd09e9772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02046b09bd09e9772",
            "map_public_ip_on_launch": true,
            "owner_id": "211590417027",
            "vpc_id": "vpc-0fe4176c08006b3a3"
          },
          "dependencies": [
            "aws_vpc.prod_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211590417027:vpc/vpc-0fe4176c08006b3a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05717811aa7257815",
            "default_route_table_id": "rtb-0190c738051401a40",
            "default_security_group_id": "sg-04a8adec20548320d",
            "dhcp_options_id": "dopt-0032896b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fe4176c08006b3a3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0190c738051401a40",
            "owner_id": "211590417027",
            "tags": {
              "marwan": "training",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}